<?xml version="1.0" encoding="utf-8"?>
<!-- activity_phone.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/webLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_phone_number"
        android:textSize="18sp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/webLabel"
        android:layout_marginTop="8dp"
        android:inputType="phone"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/example_380991234567"
        android:autofillHints="phone" />

    <Button
        android:id="@+id/phoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneEditText"
        android:layout_marginTop="16dp"
        android:text="@string/tel" />
</RelativeLayout>
